--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "funpack -e development && node functions/server.js"
+    "start": "funpack -e development && node functions/server.js",
+    "dev": "nodemon --exec npm start --watch functionsES6"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,9 @@
   },
   "homepage": "https://github.com/SilveredSliver/36-full-stack-react#readme",
   "dependencies": {
-    "express": "4.16.3",
+    "body-parser": "1.18.3",
     "cors": "2.8.4",
+    "express": "4.16.3",
     "uuidv4": "1.0.0"
   },
   "devDependencies": {
