--- a/lab-amber/frontend/package.json
+++ b/lab-amber/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "hot": "webpack-dev-server --inline --hot --history-api-fallback"
+    "hot": "webpack-dev-server --inline --hot --history-api-fallback --open"
   },
   "keywords": [],
   "author": "",
